# rigor

./: .gitignore  .rigor-cache.json  .rigor-history.json  .rigorrc.json  ACTION-PLAN.md  ACTION_PLAN.md  CHANGELOG.md  Cargo.toml  README.md  REVIEW.md  TESTING_STRATEGY.md
.github/actions/rigor-action/: action.yml
.github/workflows/: auto-release.yml  ci.yml  rigor-pr.yml
docs/: api.md  ci-integration.md  configuration.md  mcp-integration.md  mutation-testing.md  roadmap.md  rules.md  scoring.md  troubleshooting.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: analyze_source.rs
npm/: install.js  package.json
rigor-lsp/: Cargo.toml
rigor-lsp/src/: main.rs
sdk/node/: README.md  index.d.ts  index.js  package.json
src/: cache.rs  history.rs  lib.rs  main.rs  watcher.rs
src/analyzer/: engine.rs  mod.rs  scoring.rs
src/analyzer/rules/: ai_smells.rs  assertion_intent.rs  assertion_quality.rs  async_error_mishandling.rs  async_patterns.rs  behavioral_completeness.rs  boundary_conditions.rs  boundary_specificity.rs  coupling.rs  debug_code.rs  error_coverage.rs  excessive_setup.rs  flaky_patterns.rs  implementation_coupling.rs  incomplete_mock_verification.rs  input_variety.rs  missing_cleanup.rs  mock_abuse.rs  mod.rs  mutation_resistant.rs  naming_quality.rs  react_testing_library.rs  redundant_test.rs  return_path_coverage.rs  side_effect_verification.rs  state_verification.rs  test_complexity.rs  test_isolation.rs  trivial_assertion.rs  type_assertion_abuse.rs  unreachable_test_code.rs  vacuous_test.rs
src/config/: mod.rs  schema.rs
src/coverage/: istanbul.rs  mod.rs
src/detector/: framework.rs  mod.rs  source_mapper.rs
src/fixer/: mod.rs
src/mcp/: mod.rs
src/mutation/: mod.rs  operators.rs  relevance.rs  reporter.rs  runner.rs  sampler.rs
src/parser/: ast_helpers.rs  ignore_directives.rs  mod.rs  queries.rs  source_file.rs  test_file.rs  typescript.rs
src/reporter/: console.rs  html.rs  json.rs  mod.rs  sarif.rs
src/suggestions/: ai.rs  applier.rs  claude.rs  mod.rs
test-repos/corpus/: SOURCES.md  corpus-baseline.json
test-repos/fake-project/: .gitignore  .rigor-cache.json  .rigor-history.json  .rigorrc.json  package.json  rigor-report.html  tsconfig.json
test-repos/fake-project/e2e/: checkout.cy.ts  flaky-playwright.e2e.test.ts  login.e2e.test.ts  weak-cypress.cy.ts
test-repos/fake-project/tests/: auth.test.ts  (+19 more)
tests/: cache_integration.rs  cli.rs  corpus.rs  edge_cases.rs  integration.rs  mcp_integration.rs  regression.rs  watcher_integration.rs
tests/fixtures/: auth.ts  good-tests.test.ts  weak-assertions.test.ts
vscode-rigor/: package.json
vscode-rigor/src/: extension.ts
(+14 files in other folders)
